2002-05-11  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* config/os/gnu-linux/bits/os_defines.h (__glibcpp_long_bits): Define
	to 64 for hppa 64-bit port.
	(__glibcpp_long_double_bits): Define to 64 for all hppa ports.

2002-05-10  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* acinclude.m4 (enable_symvers): Quote $LD.
	* aclocal.m4: Regenerate.
	* configure: Likewise.

2002-05-09  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/lib/libstdc++-v3-dg.exp (libstdc++-v3-init): Append all
	multilib dirs containing libgcc_s*.so.1 below gcc object dir to
	LD_LIBRARY_PATH.

2002-05-08  Alexandre Oliva  <aoliva@redhat.com>

	* configure.in (ORIGINAL_LD_FOR_MULTILIBS): Preserve LD at
	script entry, and set LD to it when configuring multilibs.
	* configure: Rebuilt.

2002-05-07  Mark Mitchell  <mark@codesourcery.com>

	* configure.in: Add support for WindISS.
	* configure: Regenerated.
	* configure.target: Add support for WindISS.
	* config/os/windiss/bits/ctype_base.h: New file.
	* config/os/windiss/bits/ctype_inline.h: Likewise.
	* config/os/windiss/bits/ctype_noninline.h: Likewise.
	* config/os/windiss/bits/os_defines.h: Likewise.

2002-05-06  Paolo Carlini  <pcarlini@unitus.it>

	Test all the facets for the temporary "C" locale switch issue.
	* testsuite/22_locale/codecvt_members_char_char.cc: Add test03.
	* testsuite/22_locale/codecvt_members_wchar_t_char.cc: Likewise.
	* testsuite/22_locale/collate_members_char.cc: Add test04.
	* testsuite/22_locale/collate_members_wchar_t.cc: Likewise.
	* testsuite/22_locale/ctype_members_char.cc: Add test05.
	* testsuite/22_locale/ctype_members_wchar_t.cc: Add test04.
	* testsuite/22_locale/messages_members_char.cc: Add test03.
	* testsuite/22_locale/money_get_members_char.cc: Add test08.
	* testsuite/22_locale/money_get_members_wchar_t.cc: Likewise.
	* testsuite/22_locale/money_put_members_char.cc: Add test07. 
	* testsuite/22_locale/money_put_members_wchar_t.cc: Likewise.