@@ -1,3 +1,8 @@
+2002-05-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* config/os/irix/irix5.2/bits/os_defines.h: Revert 2002-05-06
+	change.
+
 2002-05-11  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* config/os/gnu-linux/bits/os_defines.h (__glibcpp_long_bits): Define
